Tests/ContributeWordPressTests/Helpers/Error/AssetDownloaderError.swift
import Foundation

enum AssetDownloaderError: EquatableError {
  case unreachableDestination
}
